Fixed right click to write for prints.

--- a/en_US.lang
+++ b/en_US.lang
@@ -39,6 +39,6 @@ mod.chiselsandbits.help.chiseled_block=Left click to place;Sneak to ignore block
 mod.chiselsandbits.help.bit_bag=Automatically re-stock, and store bits.
 mod.chiselsandbits.help.wrench=Right click blocks to rotate.
 mod.chiselsandbits.help.bit=Left click to chisel;Right click to place
-mod.chiselsandbits.help.positiveprint=Left click to write;right click to chisel/place or Craft with bits/bags.
-mod.chiselsandbits.help.negativeprint=Left click to write;right click to chisel.
+mod.chiselsandbits.help.positiveprint=Right click to write;right click to chisel/place or Craft with bits/bags.
+mod.chiselsandbits.help.negativeprint=Right click to write;right click to chisel.
 mod.chiselsandbits.help.chisel=Left click to chisel;Right click to cycle modes.
