--- a/en_US.lang
+++ b/en_US.lang
@@ -31,6 +31,7 @@ mod.chiselsandbits.chiselmode.connected_plane=Connected Plane
 mod.chiselsandbits.chiselmode.cube_small=Small Cube
 mod.chiselsandbits.chiselmode.cube_large=Large Cube
 mod.chiselsandbits.chiselmode.cube_huge=Huge Cube
+mod.chiselsandbits.chiselmode.drawn_region=Drawn Region
 
 mod.chiselsandbits.help.shiftdetails=<Hold Shift For Details>
 mod.chiselsandbits.help.empty=Empty
