--- a/en_US.lang
+++ b/en_US.lang
@@ -42,10 +42,63 @@ mod.chiselsandbits.other.rotate.cw=Rotate Held Clockwise
 mod.chiselsandbits.help.shiftdetails=<Hold Shift For Details>
 mod.chiselsandbits.help.empty=Empty
 
-mod.chiselsandbits.help.chiseled_block=Left click to place;Sneak to ignore block grid.
+mod.chiselsandbits.help.chiseled_block=Left click to place;Sneak to ignore block grid;Mouse Wheel to cycle placement rotation.
 mod.chiselsandbits.help.bit_bag=Automatically re-stock, and store bits.
 mod.chiselsandbits.help.wrench=Right click blocks to rotate.
 mod.chiselsandbits.help.bit=Left click to chisel;Right click to place
-mod.chiselsandbits.help.positiveprint=Right click to write;right click to chisel/place or Craft with bits/bags.
-mod.chiselsandbits.help.negativeprint=Right click to write;right click to chisel.
-mod.chiselsandbits.help.chisel=Left click to chisel;Right click to cycle modes.
+mod.chiselsandbits.help.positiveprint=Right click to write;right click to chisel/place or Craft with bits/bags.;Mouse Wheel to cycle rotation.
+mod.chiselsandbits.help.negativeprint=Right click to write;right click to chisel.;Mouse Wheel to cycle rotation.
+mod.chiselsandbits.help.chisel=Left click to chisel;Right click to cycle modes.;Mouse Wheel to cycle rotation.
+
+mod.chiselsandbits.config.ShowBitsInJEI=Show Bits in JEI
+mod.chiselsandbits.config.showUsage=Add help text to item descriptions
+mod.chiselsandbits.config.invertBitBagFullness=Invert damage bar on bit-bag.
+mod.chiselsandbits.config.enableChiselMode_Plane=Enable Mode - Plane
+mod.chiselsandbits.config.enableChiselMode_ConnectedPlane=Enable Mode - Connected Plane
+mod.chiselsandbits.config.enableChiselMode_Line=Enable Mode - Line
+mod.chiselsandbits.config.enableChiselMode_SmallCube=Enable Mode - Small Cube
+mod.chiselsandbits.config.enableChiselMode_LargeCube=Enable Mode - Large Cube
+mod.chiselsandbits.config.enableChiselMode_HugeCube=Enable Mode - Huge Cube
+mod.chiselsandbits.config.enableChiselMode_DrawnRegion=Enable Mode - Drawn Region
+mod.chiselsandbits.config.enableChiselMode_Snap2=Enable Mode - Grid Snapped 1/8 Cube
+mod.chiselsandbits.config.enableChiselMode_Snap4=Enable Mode - Grid Snapped 1/4 Cube
+mod.chiselsandbits.config.enableChiselMode_Snap8=Enable Mode - Grid Snapped 1/2 Cube
+mod.chiselsandbits.config.enableToolbarIcons=Show mode icon for chisel in tool bar
+mod.chiselsandbits.config.perChiselMode=Store selected mode per tool
+mod.chiselsandbits.config.chatModeNotification=Notify mode changes with chat
+mod.chiselsandbits.config.itemNameModeDisplay=Notify mode changes with tool highlight
+mod.chiselsandbits.config.dynamicModelFaceCount=Max faces for static render
+mod.chiselsandbits.config.dynamicModelFaceCount.tooltip=Models more complicated than this will use dyanmic rendering.
+mod.chiselsandbits.config.dynamicModelRange=Max Distance for dynamic render
+mod.chiselsandbits.config.dynamicModelRange.tooltip=Dynamically rendered blocks outside of this range will not render.
+mod.chiselsandbits.config.dynamicModelMinimizeLatancy=Minimize Latency for dynamic renders
+mod.chiselsandbits.config.dynamicModelMinimizeLatancy.tooltip=Disabling can improve performance at the cost of responsiveness.
+mod.chiselsandbits.config.dynamicMaxConcurrentTessalators=Maximum Number of Concurrent Updates
+mod.chiselsandbits.config.dynamicMaxConcurrentTessalators.tooltip=When this number is exceeded updates will begin pausing to prevent memory saturation.
+mod.chiselsandbits.config.damageTools=Tools take damage
+mod.chiselsandbits.config.availableUsesMultiplier=Available Uses Multiplier
+mod.chiselsandbits.config.availableUsesMultiplier.tooltip=0.5 = Half as many uses, 2 = Twice as many uses.
+mod.chiselsandbits.config.enablePositivePrintCrafting=Crafting with Positive Chisel Design
+mod.chiselsandbits.config.enablePositivePrintCrafting.tooltip=Crafting a positive design with bits/bags of bits will let you craft the block.
+mod.chiselsandbits.config.enableStackableCrafting=Craft Chiseled Blocks to Remove Rotation
+mod.chiselsandbits.config.enableStackableCrafting.tooltip=You can use this feature to stack the same design by stripping the rotation.
+mod.chiselsandbits.config.enableNegativePrintInversionCrafting=Invert Negative Chisel Designs
+mod.chiselsandbits.config.enableNegativePrintInversionCrafting.tooltip=Craft a filled negative design with a blank negative design.
+mod.chiselsandbits.config.enableBitBag=Enable Chiseled Bit Bag
+mod.chiselsandbits.config.enableNegativePrint=Enable Chisel Design
+mod.chiselsandbits.config.enablePositivePrint=Enable Chisel Design
+mod.chiselsandbits.config.enableChisledBits=Enable Chiseled Bits
+mod.chiselsandbits.config.enableStoneChisel=Enable Stone Chisel
+mod.chiselsandbits.config.enableIronChisel=Enable Iron Chisel
+mod.chiselsandbits.config.enableGoldChisel=Enable Golden Chisel
+mod.chiselsandbits.config.enableDiamondChisel=Enable Diamond Chisel
+mod.chiselsandbits.config.enableWoodenWrench=Enable Wooden Wrench
+mod.chiselsandbits.config.enableChiselToolHarvestCheck=Check tool types / levels for chisels
+mod.chiselsandbits.config.enableChiselToolHarvestCheck.tooltip=To harvest obsidian bits you require a dimaond chisel.
+mod.chiselsandbits.config.enableChiselToolHarvestCheckTools=Tool types emulated by chisels
+mod.chiselsandbits.config.enableToolHarvestLevels=Check tool level when breaking blocks
+mod.chiselsandbits.config.enableToolHarvestLevels.tooltip=Breaking an primary obsidian chiseled block will require a diamond level tool.
+mod.chiselsandbits.config.enableBitLightSource=Chiseled blocks can emit light
+mod.chiselsandbits.config.enableBitLightSource.tooltip=When disabled light emiting bits will simply glow and the block will emit no light level.
+mod.chiselsandbits.config.bitLightPercentage=Percentage of block for max light level
+mod.chiselsandbits.config.compatabilityMode=Enhance Mod compatibility
