Shorten Creative Tab Name.

--- a/en_US.lang
+++ b/en_US.lang
@@ -1,5 +1,5 @@
 
-itemGroup.chiselsandbits=Chisels and Bits
+itemGroup.chiselsandbits=Chisels & Bits
 
 tile.mod.chiselsandbits.chiseled_wood.name=Chiseled Wood
 tile.mod.chiselsandbits.chiseled_rock.name=Chiseled Rock
