--- a/src/main/resources/assets/chiselsandbits/lang/en_US.lang
+++ b/src/main/resources/assets/chiselsandbits/lang/en_US.lang
@@ -61,6 +61,7 @@ mod.chiselsandbits.other.mode=Radial Menu
 mod.chiselsandbits.other.undo=Undo
 mod.chiselsandbits.other.redo=Redo
 mod.chiselsandbits.other.pickbit=Pick Bit
+mod.chiselsandbits.other.add_to_clipboard=Pick Block to Clipboard
 
 mod.chiselsandbits.help.shiftdetails=<Hold Shift For Details>
 mod.chiselsandbits.help.empty=Empty
@@ -99,7 +100,6 @@ mod.chiselsandbits.config.fluidBitsAreClickThough=Click though Fluid Bits.
 mod.chiselsandbits.config.addBrokenBlocksToCreativeClipboard=Add Broken Blocks to Creative clipboard
 mod.chiselsandbits.config.creativeClipboardSize=Creative Clip Board Size
 mod.chiselsandbits.config.creativeClipboardSize.tooltip=Number of items that can be stored on the creative clipboard before they begin to be removed, 0 will disable it.
-mod.chiselsandbits.config.ShowBitsInJEI=Show Bits in JEI
 mod.chiselsandbits.config.ShowBitsInJEI=Show Bits in JEI
 mod.chiselsandbits.config.maxDrawnRegionSize=Max Drawn Region Size
 mod.chiselsandbits.config.showUsage=Add help text to item descriptions
