--- a/src/main/resources/assets/chiselsandbits/lang/en_US.lang
+++ b/src/main/resources/assets/chiselsandbits/lang/en_US.lang
@@ -22,6 +22,8 @@ tile.mod.chiselsandbits.bittank.name=Chiseled Fluid Bit Tank
 item.mod.chiselsandbits.block_bit.name=Chiseled Bit
 item.mod.chiselsandbits.bit_bag.name=Chiseled Bit Bag
 item.mod.chiselsandbits.wrench_wood.name=Wooden Wrench
+item.mod.chiselsandbits.blueprint.name=Blueprint
+item.mod.chiselsandbits.blueprint_written.name=Blueprint - Written
 
 item.mod.chiselsandbits.positiveprint.name=Positive Chisel Design
 item.mod.chiselsandbits.positiveprint_written.name=Positive Chisel Design - Written
@@ -73,6 +75,10 @@ mod.chiselsandbits.other.undo=Undo
 mod.chiselsandbits.other.redo=Redo
 mod.chiselsandbits.other.pickbit=Pick Bit
 mod.chiselsandbits.other.add_to_clipboard=Pick Block to Clipboard
+
+mod.chiselsandbits.blueprint.local=Load From File
+mod.chiselsandbits.blueprint.url=Load From URL
+mod.chiselsandbits.blueprint.create=Create New Blueprint
 
 mod.chiselsandbits.help.shiftdetails=<Hold Shift For Details>
 mod.chiselsandbits.help.empty=Empty
