--- a/src/main/resources/assets/chiselsandbits/lang/en_US.lang
+++ b/src/main/resources/assets/chiselsandbits/lang/en_US.lang
@@ -73,7 +73,7 @@ mod.chiselsandbits.help.wrench=Right click blocks to rotate.
 mod.chiselsandbits.help.bit=Left click to chisel;Right click to place;Use {} to display menu.
 mod.chiselsandbits.help.positiveprint=Right click to write;Right click to chisel/place or Craft with bits/bags.;Mouse Wheel to cycle rotation.
 mod.chiselsandbits.help.negativeprint=Right click to write;Right click to chisel.;Mouse Wheel to cycle rotation.
-mod.chiselsandbits.help.mirrorprint=Right click the face on wish to mirror from;Craft with positive/negative design to transfer.
+mod.chiselsandbits.help.mirrorprint=Right click the face you wish to mirror from;Craft with positive/negative design to transfer.
 mod.chiselsandbits.help.chisel=Left click to chisel;Use {} to display menu.
 mod.chiselsandbits.help.bitsaw=Craft with Blocks or Chiseled blocks;Cut along any of the 3 axis.
 mod.chiselsandbits.help.bittank=Fill with fluid and extract bits.
