--- a/src/main/resources/assets/chiselsandbits/lang/en_US.lang
+++ b/src/main/resources/assets/chiselsandbits/lang/en_US.lang
@@ -49,6 +49,10 @@ mod.chiselsandbits.chiselmode.cube_medium=Medium Cube
 mod.chiselsandbits.chiselmode.cube_large=Large Cube
 mod.chiselsandbits.chiselmode.drawn_region=Drawn Region
 
+mod.chiselsandbits.positivepatternmode.replace=Replace
+mod.chiselsandbits.positivepatternmode.additive=Additive
+mod.chiselsandbits.positivepatternmode.placement=Placement
+
 mod.chiselsandbits.result.out_of_range=Not close enough
 mod.chiselsandbits.result.has_changed=Block has changed
 mod.chiselsandbits.result.missing_bits=Not enough bits or chisel durability!
@@ -71,7 +75,7 @@ mod.chiselsandbits.help.chiseled_block=Left click to place;Sneak to ignore block
 mod.chiselsandbits.help.bit_bag=Automatically re-stock, and store bits.
 mod.chiselsandbits.help.wrench=Right click blocks to rotate.
 mod.chiselsandbits.help.bit=Left click to chisel;Right click to place;Use {} to display menu.
-mod.chiselsandbits.help.positiveprint=Right click to write;Right click to chisel/place or Craft with bits/bags.;Mouse Wheel to cycle rotation.
+mod.chiselsandbits.help.positiveprint=Right click to write;Right click to chisel/place or Craft with bits/bags.;Mouse Wheel to cycle rotation;Use {} to display menu.
 mod.chiselsandbits.help.negativeprint=Right click to write;Right click to chisel.;Mouse Wheel to cycle rotation.
 mod.chiselsandbits.help.mirrorprint=Right click the face you wish to mirror from;Craft with positive/negative design to transfer.
 mod.chiselsandbits.help.chisel=Left click to chisel;Use {} to display menu.
