Not much, but its progress. Blueprint entities look like blueprints now. The share command can now output text files, clipboard, and images. Small amount of work on the usage side.

--- a/src/main/resources/assets/chiselsandbits/lang/en_US.lang
+++ b/src/main/resources/assets/chiselsandbits/lang/en_US.lang
@@ -100,6 +100,11 @@ mod.chiselsandbits.help.rightalt=Right Alt
 mod.chiselsandbits.help.trash=Delete Bag Contents
 mod.chiselsandbits.help.reallytrash=Click again to confirm deletion.
 
+mod.chiselsandbits.help.share.start=Blueprint Generation Starting
+mod.chiselsandbits.help.share.complete=Blueprint Generation Complete
+mod.chiselsandbits.help.share.clipboard=The data has been copied to your clipboard.
+mod.chiselsandbits.help.share.file=The file has been saved successfully.
+
 mod.chiselsandbits.config.maxUndoLevel=Max Undo Level
 mod.chiselsandbits.config.persistCreativeClipboard=Save/Load Creative Clipboard Contents
 mod.chiselsandbits.config.fluidBitsAreClickThough=Click though Fluid Bits.
